--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,8 @@
 .vs/RondleidingRobot/v16/TestStore/0/001.testlog
 .vs/RondleidingRobot/v16/TestStore/0/testlog.manifest
 *.cache
+*.cache
+*.cache
+*.lref
+*.json
+*.pdb
